--- a/package.json
+++ b/package.json
@@ -1,27 +1,4 @@
 {
-  "name": "vite-vue3-chrome-extension-v3",
-  "displayName": "Vite Vue 3 Chrome Extension",
-  "type": "module",
-  "version": "0.0.1",
-  "private": true,
-  "description": "A Vue 3 + Vite project for building Chrome extensions",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mubaidr/vite-vue3-chrome-extension-v3"
-  },
-  "scripts": {
-    "build": "npm run build:chrome && npm run build:firefox",
-    "build:chrome": "vite build",
-    "build:firefox": "vite build -c vite.firefox.config.js",
-    "dev": "concurrently \"npm run dev:chrome\" \"npm run dev:firefox\"",
-    "dev:chrome": "vite",
-    "dev:firefox": "vite build --mode development --watch -c vite.firefox.config.js",
-    "format": "prettier --write .",
-    "lint": "eslint . --fix",
-    "lint:manifest": "web-ext lint --pretty",
-    "preview": "vite preview",
-    "typecheck": "vue-tsc --noEmit"
-  },
   "dependencies": {
     "marked": "^12.0.2",
     "pinia": "^2.1.7",
@@ -29,41 +6,48 @@
     "vue-router": "^4.3.2",
     "webextension-polyfill": "^0.12.0"
   },
+  "description": "A Vue 3 + Vite project for building Chrome extensions",
   "devDependencies": {
-    "@antfu/eslint-config": "^2.20.0",
+    "@antfu/eslint-config": "^2.21.0",
     "@crxjs/vite-plugin": "^2.0.0-beta.23",
     "@iconify-json/mdi": "^1.1.66",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
     "@types/chrome": "^0.0.268",
-    "@types/node": "^20.14.1",
+    "@types/node": "^20.14.2",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/compiler-sfc": "^3.4.27",
     "@vueuse/core": "^10.10.0",
     "autoprefixer": "^10.4.19",
-    "chrome-types": "^0.1.286",
+    "chrome-types": "^0.1.287",
     "concurrently": "^8.2.2",
     "cross-env": "^7.0.3",
-    "daisyui": "^4.11.1",
+    "daisyui": "^4.12.2",
     "eslint": "^9.4.0",
-    "globals": "^15.3.0",
+    "globals": "^15.4.0",
     "postcss": "^8.4.38",
-    "prettier": "^3.3.0",
-    "prettier-plugin-tailwindcss": "^0.6.1",
+    "prettier": "^3.3.1",
+    "prettier-plugin-tailwindcss": "^0.6.2",
     "sass": "^1.77.4",
-    "tailwindcss": "^3.4.3",
-    "terser": "^5.31.0",
+    "tailwindcss": "^3.4.4",
+    "terser": "^5.31.1",
+    "tsx": "^4.15.0",
     "typescript": "^5.4.5",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.0",
-    "unplugin-vue-router": "^0.9.0",
-    "vite": "^5.2.12",
+    "unplugin-vue-router": "^0.9.1",
+    "vite": "^5.2.13",
     "vite-plugin-pages": "^0.32.2",
     "vite-plugin-vue-devtools": "^7.2.1",
-    "vue-tsc": "^2.0.19",
+    "vue-tsc": "^2.0.21",
     "web-ext": "^8.0.0",
     "webext-bridge": "^6.0.1"
+  },
+  "displayName": "Vite Vue 3 Chrome Extension",
+  "name": "vite-vue3-chrome-extension-v3",
+  "overrides": {
+    "@crxjs/vite-plugin": "$@crxjs/vite-plugin"
   },
   "pnpm": {
     "overrides": {},
@@ -76,7 +60,25 @@
       "ignoreMissing": []
     }
   },
-  "overrides": {
-    "@crxjs/vite-plugin": "$@crxjs/vite-plugin"
-  }
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/mubaidr/vite-vue3-chrome-extension-v3"
+  },
+  "scripts": {
+    "build": "npm run build:chrome && npm run build:firefox",
+    "build:chrome": "vite build",
+    "build:firefox": "vite build -c vite.firefox.config.js",
+    "dev": "concurrently \"npm run dev:chrome\" \"npm run dev:firefox\"",
+    "dev:chrome": "vite",
+    "dev:firefox": "vite build --mode development --watch -c vite.firefox.config.js",
+    "dev:server": "tsx server/index.ts",
+    "format": "prettier --write .",
+    "lint": "eslint . --fix",
+    "lint:manifest": "web-ext lint --pretty",
+    "preview": "vite preview",
+    "typecheck": "vue-tsc --noEmit"
+  },
+  "type": "module",
+  "version": "0.0.1"
 }
