--- a/package.json
+++ b/package.json
@@ -1,28 +1,4 @@
 {
-  "name": "vite-vue3-chrome-extension-v3",
-  "displayName": "Vite Vue 3 Chrome Extension",
-  "type": "module",
-  "version": "0.0.1",
-  "private": true,
-  "description": "A Vue 3 + Vite project for building Chrome extensions",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mubaidr/vite-vue3-chrome-extension-v3"
-  },
-  "scripts": {
-    "build": "npm run build:chrome && npm run build:firefox",
-    "build:chrome": "vite build",
-    "build:firefox": "vite build -c vite.firefox.config.js",
-    "dev": "concurrently \"npm run dev:chrome\" \"npm run dev:firefox\"",
-    "dev:chrome": "vite",
-    "dev:firefox": "vite build --mode development --watch -c vite.firefox.config.js",
-    "dev:server": "tsx server/index.ts",
-    "format": "prettier --write .",
-    "lint": "eslint . --fix",
-    "lint:manifest": "web-ext lint --pretty",
-    "preview": "vite preview",
-    "typecheck": "vue-tsc --noEmit"
-  },
   "dependencies": {
     "marked": "^13.0.1",
     "pinia": "^2.1.7",
@@ -30,6 +6,7 @@
     "vue-router": "^4.4.0",
     "webextension-polyfill": "^0.12.0"
   },
+  "description": "bookingfor-extension-v900",
   "devDependencies": {
     "@antfu/eslint-config": "^2.21.2",
     "@crxjs/vite-plugin": "^2.0.0-beta.23",
@@ -69,6 +46,11 @@
     "web-ext": "^8.2.0",
     "webext-bridge": "^6.0.1"
   },
+  "displayName": "bookingfor-extension-v900",
+  "name": "bookingfor-extension-v900",
+  "overrides": {
+    "@crxjs/vite-plugin": "$@crxjs/vite-plugin"
+  },
   "pnpm": {
     "overrides": {},
     "peerDependencyRules": {
@@ -80,7 +62,21 @@
       "ignoreMissing": []
     }
   },
-  "overrides": {
-    "@crxjs/vite-plugin": "$@crxjs/vite-plugin"
-  }
+  "private": true,
+  "scripts": {
+    "build": "npm run build:chrome && npm run build:firefox",
+    "build:chrome": "vite build",
+    "build:firefox": "vite build -c vite.firefox.config.js",
+    "dev": "concurrently \"npm run dev:chrome\" \"npm run dev:firefox\"",
+    "dev:chrome": "vite",
+    "dev:firefox": "vite build --mode development --watch -c vite.firefox.config.js",
+    "dev:server": "tsx server/index.ts",
+    "format": "prettier --write .",
+    "lint": "eslint . --fix",
+    "lint:manifest": "web-ext lint --pretty",
+    "preview": "vite preview",
+    "typecheck": "vue-tsc --noEmit"
+  },
+  "type": "module",
+  "version": "0.0.1"
 }
