--- a/package.json
+++ b/package.json
@@ -1,68 +1,10 @@
 {
-  "dependencies": {
-    "marked": "^13.0.1",
-    "pinia": "^2.1.7",
-    "vue": "^3.4.31",
-    "vue-router": "^4.4.0",
-    "webextension-polyfill": "^0.12.0"
-  },
-  "description": "bookingfor-extension-v900",
-  "devDependencies": {
-    "@antfu/eslint-config": "^2.21.2",
-    "@crxjs/vite-plugin": "^2.0.0-beta.23",
-    "@iconify-json/mdi": "^1.1.67",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.13",
-    "@types/chrome": "^0.0.268",
-    "@types/eslint": "~8.56.10",
-    "@types/node": "^20.14.9",
-    "@types/webextension-polyfill": "~0.10.7",
-    "@vitejs/plugin-vue": "^5.0.5",
-    "@vue/compiler-sfc": "^3.4.31",
-    "@vueuse/core": "^10.11.0",
-    "autoprefixer": "^10.4.19",
-    "chrome-types": "^0.1.290",
-    "concurrently": "^8.2.2",
-    "cross-env": "^7.0.3",
-    "daisyui": "^4.12.10",
-    "eslint": "^9.6.0",
-    "globals": "^15.7.0",
-    "postcss": "^8.4.39",
-    "prettier": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.5",
-    "sass": "^1.77.6",
-    "tailwindcss": "^3.4.4",
-    "terser": "^5.31.1",
-    "tsx": "^4.16.0",
-    "typescript": "^5.5.2",
-    "unplugin-auto-import": "^0.17.6",
-    "unplugin-icons": "^0.19.0",
-    "unplugin-vue-components": "^0.27.2",
-    "unplugin-vue-router": "^0.10.0",
-    "vite": "^5.3.2",
-    "vite-plugin-pages": "^0.32.3",
-    "vite-plugin-vue-devtools": "^7.3.5",
-    "vue-tsc": "^2.0.24",
-    "web-ext": "^8.2.0",
-    "webext-bridge": "^6.0.1"
-  },
-  "displayName": "bookingfor-extension-v900",
   "name": "bookingfor-extension-v900",
-  "overrides": {
-    "@crxjs/vite-plugin": "$@crxjs/vite-plugin"
-  },
-  "pnpm": {
-    "overrides": {},
-    "peerDependencyRules": {
-      "allowAny": [],
-      "allowedDeprecatedVersions": {
-        "sourcemap-codec": "1.4.8"
-      },
-      "allowedVersions": {},
-      "ignoreMissing": []
-    }
-  },
+  "displayName": "bookingfor-extension-v900",
+  "type": "module",
+  "version": "0.0.1",
   "private": true,
+  "description": "bookingfor-extension-v900",
   "scripts": {
     "build": "npm run build:chrome && npm run build:firefox",
     "build:chrome": "vite build",
@@ -77,6 +19,64 @@
     "preview": "vite preview",
     "typecheck": "vue-tsc --noEmit"
   },
-  "type": "module",
-  "version": "0.0.1"
+  "dependencies": {
+    "marked": "^13.0.2",
+    "pinia": "^2.1.7",
+    "vue": "^3.4.31",
+    "vue-router": "^4.4.0",
+    "webextension-polyfill": "^0.12.0"
+  },
+  "devDependencies": {
+    "@antfu/eslint-config": "^2.21.2",
+    "@crxjs/vite-plugin": "^2.0.0-beta.23",
+    "@iconify-json/mdi": "^1.1.67",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.13",
+    "@types/chrome": "^0.0.268",
+    "@types/eslint": "~8.56.10",
+    "@types/node": "^20.14.9",
+    "@types/webextension-polyfill": "~0.10.7",
+    "@vitejs/plugin-vue": "^5.0.5",
+    "@vue/compiler-sfc": "^3.4.31",
+    "@vueuse/core": "^10.11.0",
+    "autoprefixer": "^10.4.19",
+    "chrome-types": "^0.1.291",
+    "concurrently": "^8.2.2",
+    "cross-env": "^7.0.3",
+    "daisyui": "^4.12.10",
+    "eslint": "^9.6.0",
+    "globals": "^15.8.0",
+    "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
+    "sass": "^1.77.6",
+    "tailwindcss": "^3.4.4",
+    "terser": "^5.31.1",
+    "tsx": "^4.16.2",
+    "typescript": "^5.5.3",
+    "unplugin-auto-import": "^0.17.6",
+    "unplugin-icons": "^0.19.0",
+    "unplugin-vue-components": "^0.27.2",
+    "unplugin-vue-router": "^0.10.0",
+    "vite": "^5.3.3",
+    "vite-plugin-pages": "^0.32.3",
+    "vite-plugin-vue-devtools": "^7.3.5",
+    "vue-tsc": "^2.0.26",
+    "web-ext": "^8.2.0",
+    "webext-bridge": "^6.0.1"
+  },
+  "pnpm": {
+    "overrides": {},
+    "peerDependencyRules": {
+      "allowAny": [],
+      "allowedDeprecatedVersions": {
+        "sourcemap-codec": "1.4.8"
+      },
+      "allowedVersions": {},
+      "ignoreMissing": []
+    }
+  },
+  "overrides": {
+    "@crxjs/vite-plugin": "$@crxjs/vite-plugin"
+  }
 }
