--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
   "include": [
     "package.json",
     "vite.config.ts",
-    // "manifest.config.ts",
+    "manifest.config.ts",
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
